--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -190,17 +190,17 @@
     <!-- Character with animation setup -->
     <ImageView
         android:id="@+id/characterImage"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
+        android:layout_width="463dp"
+        android:layout_height="531dp"
         android:layout_marginStart="48dp"
-        android:layout_marginEnd="48dp"
         android:layout_marginTop="8dp"
+        android:layout_marginEnd="48dp"
         android:layout_marginBottom="8dp"
-        android:adjustViewBounds="true"
         android:alpha="1"
         android:clickable="true"
         android:contentDescription="BaoBao the panda character"
         android:focusable="true"
+        android:scaleType="fitCenter"
         android:scaleX="1"
         android:scaleY="1"
         android:src="@drawable/mainscreen_outfit1_fullbody_hello"
